<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/TopAdView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/Admob_Key_Banner" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/stadium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="14" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5" >

                <TextView
                    android:id="@+id/tvTeam1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Tmp_TeamA"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivChangeTeam"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_change" />

                <TextView
                    android:id="@+id/tvTeam2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Tmp_TeamB"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlStadium"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="12" >

                <LinearLayout
                    android:id="@+id/llInformation"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/popup_bg"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Popup_Info_Title"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/TextSize"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_bg"
                        android:hint="@string/Popup_Info_Hint_Number"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_bg"
                        android:hint="@string/Popup_Info_Hint_Name" />

                    <Button
                        android:id="@+id/btnFinish"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/selector_btn_finish"
                        android:text="@string/Finish"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/TextSize"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPopupSetting"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/popup_bg"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="visible"
                    android:weightSum="15" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/popup_title"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/popup_devideline" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="13"
                        android:orientation="vertical"
                        android:weightSum="5" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2" >

                            <EditText
                                android:id="@+id/etTeam1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/textview_bg"
                                android:hint="@string/Hint_TeamA_Name" />

                            <EditText
                                android:id="@+id/etCoach1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/textview_bg"
                                android:hint="@string/Hint_CoachA_Name" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2" >

                            <EditText
                                android:id="@+id/etTeam2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/textview_bg"
                                android:hint="@string/Hint_TeamB_Name" />

                            <EditText
                                android:id="@+id/etCoach2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/textview_bg"
                                android:hint="@string/Hint_CoachB_Name" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/popup_column"
                            android:textColor="@android:color/black" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/textview_bg" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/selector" />

                            <Spinner
                                android:id="@+id/spNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@android:color/transparent" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btnStart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/selector_btn_go"
                            android:onClick="startGame" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5" >

                <TextView
                    android:id="@+id/tvCoach1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Tmp_CoachA"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvCoach2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Tmp_CoachB"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>